--- a/.travis.yml
+++ b/.travis.yml
@@ -56,14 +56,14 @@ matrix:
   # ---- Linux + CLANG ---------------------------
     - os: linux
       compiler: "clang-3.8"
-      env: T="clang38_pg92_dbtest" RUNTEST="#Dbtest" LUAJIT_OPTION="OFF"
+      env: T="clang38_pg92_dbtest" LUAJIT_OPTION="OFF"
            CXXFLAGS="-pedantic -Werror"
            CC=clang-3.8 CXX=clang++-3.8
       addons: *clang38_pg92
 
     - os: linux
       compiler: "clang-7"
-      env: T="clang7_pg96_dbtest_luajit" RUNTEST="#Dbtest" LUAJIT_OPTION="ON"
+      env: T="clang7_pg96_dbtest_luajit" LUAJIT_OPTION="ON"
            CXXFLAGS="-pedantic -Werror"
            CC=clang-7 CXX=clang++-7
       addons: *clang7_pg96
@@ -71,7 +71,7 @@ matrix:
   # ---- OSX + CLANG ---------------------------
     - os: osx
       compiler: clang
-      env: T="osx_clang_NoDB" RUNTEST="-L NoDB" LUAJIT_OPTION="OFF"
+      env: T="osx_clang_NoDB" LUAJIT_OPTION="OFF" TEST_NODB=1
            CXXFLAGS="-pedantic -Werror"
       before_install:
         - brew install lua;
@@ -83,26 +83,23 @@ matrix:
   # ---- Linux + GCC ---------------------------
     - os: linux
       compiler: "gcc-4.8"
-      env: T="gcc48_pg96_dbtest"  RUNTEST="#Dbtest" LUAJIT_OPTION="OFF"
+      env: T="gcc48_pg96_dbtest" LUAJIT_OPTION="OFF"
            CXXFLAGS="-pedantic -Werror"
            CC=gcc-4.8 CXX=g++-4.8
       addons: *gcc48_pg96
 
     - os: linux
       compiler: gcc-8
-      env: T="gcc8_pg96_dbtest_luajit" RUNTEST="#Dbtest" LUAJIT_OPTION="ON"
+      env: T="gcc8_pg96_dbtest_luajit" LUAJIT_OPTION="ON"
            CXXFLAGS="-pedantic -Werror"
            CC=gcc-8 CXX=g++-8
       addons: *gcc8_pg96
 
 
 before_install:
-  - sudo mkdir -p /extra/pg/tablespacetest   # for the database test
-  - sudo chown postgres:postgres /extra/pg/tablespacetest
   - dpkg -l | grep -E 'lua|proj|xml|bz2|postgis|zlib|boost|expat'  # checking available versions
 before_script:
   - psql -U postgres -c "SELECT version()"
-  - psql -U postgres -c "CREATE TABLESPACE tablespacetest LOCATION '/extra/pg/tablespacetest'"
   - psql -U postgres -c "CREATE EXTENSION postgis"
   - psql -U postgres -c "CREATE EXTENSION hstore"
   - psql -U postgres -c "SELECT PostGIS_Full_Version()"
@@ -115,7 +112,12 @@ script:
   - cmake .. -DBUILD_TESTS=ON -DCMAKE_BUILD_TYPE=Debug -DWITH_LUAJIT=$LUAJIT_OPTION
   - make -j2
   - echo "Running tests ... "
-  - if [[ $RUNTEST ]]; then ctest -VV $RUNTEST; fi
+  - if [[ $TEST_NODB ]]; then
+      ctest -VV -L NoDB;
+    else
+      PG_VERSION=`psql -U postgres -t -c "SELECT version()" | head -n 1 |  cut -d ' ' -f 3 | cut -d . -f 1-2`;
+      pg_virtualenv -v $PG_VERSION ctest -VV;
+    fi
 after_failure:
   - # rerun make, but verbosely
     make VERBOSE=1
