travis: run brew install twice to be on the safe side
For some reason it might error out the first time and
just tell you to run the command again. Always running
it twice should be good enough to work around this
situation.

--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ matrix:
       env: T="osx_clang_NoDB" LUAJIT_OPTION="OFF" TEST_NODB=1
            CXXFLAGS="-pedantic -Werror"
       before_install:
-        - brew install lua;
+        - brew install lua; brew install lua
       before_script:
         - xml2-config --version
         - proj | head -n1
