Enable LuaJIT by default and document it
LuaJIT provides a significant speedup while requiring no change in
usage, making complex Lua transforms as fast as the C transforms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ endif()
 
 option(BUILD_TESTS "Build test suite" OFF)
 option(WITH_LUA    "Build with Lua support" ON)
-option(WITH_LUAJIT "Build with LuaJIT support" OFF)
+option(WITH_LUAJIT "Build with LuaJIT support" ON)
 
 if (NOT TESTING_TIMEOUT)
   set(TESTING_TIMEOUT 1200)
