start tests for middle

--- a/newtests/CMakeLists.txt
+++ b/newtests/CMakeLists.txt
@@ -3,6 +3,7 @@ set (TESTS
     test-db-copy-mgr.cpp
     test-middle.cpp
     test-output-gazetteer.cpp
+    test-ram-cache.cpp
     test-wildcard-match.cpp
 )
 
