--- a/newtests/CMakeLists.txt
+++ b/newtests/CMakeLists.txt
@@ -2,6 +2,7 @@ set (TESTS
     test-db-copy-thread.cpp
     test-db-copy-mgr.cpp
     test-middle.cpp
+    test-options-parse.cpp
     test-output-gazetteer.cpp
     test-persistent-cache.cpp
     test-ram-cache.cpp
