port test_output_pgsql-area to catch

--- a/newtests/CMakeLists.txt
+++ b/newtests/CMakeLists.txt
@@ -7,6 +7,7 @@ set (TESTS
     test-options-projection.cpp
     test-output-gazetteer.cpp
     test-output-pgsql.cpp
+    test-output-pgsql-area.cpp
     test-persistent-cache.cpp
     test-ram-cache.cpp
     test-wildcard-match.cpp
