--- a/newtests/CMakeLists.txt
+++ b/newtests/CMakeLists.txt
@@ -13,7 +13,7 @@ set (TESTS
     test-output-pgsql-tablespace.cpp
     test-output-pgsql-validgeom.cpp
     test-output-pgsql-z_order.cpp
-    test-parse-diff.cpp
+    test-parse-osmium.cpp
     test-persistent-cache.cpp
     test-ram-cache.cpp
     test-wildcard-match.cpp
