--- a/newtests/CMakeLists.txt
+++ b/newtests/CMakeLists.txt
@@ -55,3 +55,23 @@ endif()
 set_tests_properties(test-output-pgsql-tablespace
                      PROPERTIES FIXTURES_REQUIRED Tablespace)
 
+if (NOT HAVE_LUA)
+  # these tests require LUA support
+  set_tests_properties(test-output-multi-poly-trivial PROPERTIES WILL_FAIL on)
+  set_tests_properties(test-output-multi-tags PROPERTIES WILL_FAIL on)
+endif()
+
+find_package(PythonInterp 3)
+
+if (PYTHONINTERP_FOUND)
+  add_test(NAME regression-test-pbf COMMAND ${PYTHON_EXECUTABLE} tests/regression-test.py -f tests/liechtenstein-2013-08-03.osm.pbf -x $<TARGET_FILE:osm2pgsql>
+    WORKING_DIRECTORY ${osm2pgsql_SOURCE_DIR})
+  set_tests_properties(regression-test-pbf PROPERTIES TIMEOUT ${TESTING_TIMEOUT})
+  set_tests_properties(regression-test-pbf
+      PROPERTIES ENVIRONMENT "HAVE_LUA=${LUA_FOUND}")
+  set_tests_properties(regression-test-pbf
+                       PROPERTIES FIXTURES_REQUIRED Tablespace)
+  message(STATUS "Added test: regression-test-pbf (needs Python with psycopg2 module)")
+else()
+  message(WARNING "Can not find python, regression test disabled")
+endif()
