Mark all external include dirs as SYSTEM includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,11 +97,11 @@ include_directories(SYSTEM ${OSMIUM_INCLUDE_DIRS} ${PROTOZERO_INCLUDE_DIR})
 if (WITH_LUA)
   if (WITH_LUAJIT)
     find_package(LuaJIT REQUIRED)
-    include_directories(${LUAJIT_INCLUDE_DIR})
+    include_directories(SYSTEM ${LUAJIT_INCLUDE_DIR})
     set(HAVE_LUAJIT 1)
   else()
     find_package(Lua REQUIRED)
-    include_directories(${LUA_INCLUDE_DIR})
+    include_directories(SYSTEM ${LUA_INCLUDE_DIR})
   endif()
   set(HAVE_LUA 1)
 endif()
@@ -112,10 +112,10 @@ endif()
 
 # first try to find the version
 find_package(Boost 1.50 REQUIRED COMPONENTS system filesystem ${BOOST_EXTRA})
-include_directories(${Boost_INCLUDE_DIR})
+include_directories(SYSTEM ${Boost_INCLUDE_DIR})
 
 find_package(PostgreSQL REQUIRED)
-include_directories(${PostgreSQL_INCLUDE_DIRS})
+include_directories(SYSTEM ${PostgreSQL_INCLUDE_DIRS})
 
 find_package(Threads)
 
@@ -136,7 +136,7 @@ if (WIN32)
     find_path(GETOPT_INCLUDE_DIR getopt.h)
     find_library(GETOPT_LIBRARY NAMES wingetopt getopt )
     if (GETOPT_INCLUDE_DIR AND GETOPT_LIBRARY)
-      include_directories(${GETOPT_INCLUDE_DIR})
+      include_directories(SYSTEM ${GETOPT_INCLUDE_DIR})
       list(APPEND LIBS ${GETOPT_LIBRARY})
     else()
       message(ERROR "Can not find getopt library for Windows. Please get it from https://github.com/alex85k/wingetopt or alternative source.")
